--- a/MyTestApp/app/src/main/res/layout/activity_main.xml
+++ b/MyTestApp/app/src/main/res/layout/activity_main.xml
@@ -34,29 +34,19 @@
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@+id/textView1"
                 android:text=" show IP" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:weightSum="1"
-            android:layout_marginBottom="10dp">
 
-            <EditText
-                android:id="@+id/SendText"
+            <TextView
+                android:id="@+id/CountBox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignRight="@+id/textView1"
-                android:text="Hello " />
-            <Button
-                android:id="@+id/SendButton"
+                android:layout_height="fill_parent"
+                android:layout_weight="1.0"/>
+            <TextView
+                android:id="@+id/TimeBox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignRight="@+id/textView1"
-                android:text="Send" />
+                android:layout_height="fill_parent"
+                android:layout_weight="1.0"/>
         </LinearLayout>
+
 
         <ScrollView
             android:id="@+id/SCROLLER_ID"
